--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/react-scroll": "^1.8.6",
+    "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^5.0.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.8.9",
     "sass": "^1.59.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
