--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-scroll": "^1.8.6",
     "gh-pages": "^5.0.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "sass": "^1.59.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
