fix: some fixes for deploy to vercel

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "empire_builders",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Zouker.github.io/empire_builders",
+  "homepage": "/",
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.14.1",
