--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.3.1",
     "react-google-maps": "^9.4.5",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "18.3.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "sass": "^1.59.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
+  },
+  "engines": {
+    "node": "22.x"
   },
   "scripts": {
     "start": "react-scripts start",
