--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@types/react-scroll": "^1.8.6",
     "gh-pages": "^5.0.0",
     "hamburger-react": "^2.5.0",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "18.3.1",
     "react-google-maps": "^9.4.5",
-    "react-router-dom": "18.3.1",
+    "react-router-dom": "7.9.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "sass": "^1.59.3",
