--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@types/react-scroll": "^1.8.6",
     "gh-pages": "^5.0.0",
     "hamburger-react": "^2.5.0",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "7.9.3",
     "react-scripts": "5.0.1",
