--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.6",
+    "framer-motion": "^12.23.22",
     "gh-pages": "^5.0.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.3.1",
-    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "7.9.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-swipeable": "^7.0.2",
     "sass": "^1.59.3",
-    "typescript": "^4.4.2",
+    "typescript": "^5.9.3",
     "web-vitals": "^2.1.0"
   },
   "engines": {
